examples/test/testpolicy16662.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16662
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key17: value38
      key24: value21
      key2: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value7
          key30: value44
          key15: value19
